# charted

./: .gitignore
backend/: env.example  main.py  pyproject.toml  railway.toml  requirements.txt  start.sh
backend/api/: main.py
backend/api/routes/: auth.py  user.py
backend/app/api/: user.py
backend/app/core/: config.py  database.py
backend/app/models/: user.py
backend/core/: config.py  crud.py  login.py  security.py
backend/models/: user.py
backend/schema/: user.py
frontend/: package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/ConnectRavelry/: index.tsx
frontend/src/components/DashboardLayout/: index.tsx
frontend/src/components/Form/: index.tsx  styles.module.css
frontend/src/components/Home/: index.tsx  styles.module.css
frontend/src/components/Input/: PasswordInput.tsx  styles.module.css
frontend/src/components/Layout/: Header.tsx  Nav.tsx  styles.module.css
frontend/src/components/Login/: index.tsx  styles.module.css
frontend/src/components/ProtectedRoute/: index.tsx
frontend/src/components/Register/: index.tsx
frontend/src/components/TabsList/: index.tsx
frontend/src/lib/hooks/: useAuth.ts
frontend/src/lib/services/api/: auth.ts  client.ts
frontend/src/lib/styles/: form.module.css
frontend/src/lib/types/: auth.ts
frontend/src/lib/utils/: createToken.ts
frontend/src/pages/: Dashboard.tsx  styles.module.css
